# stdiobus-rust

./: .gitignore  Cargo.toml  README.md
.agents/skills/stdiobus-rust-sdk/: SKILL.md
.agents/skills/stdiobus-rust-sdk/references/: api-types.md  backend-trait.md  config-schema.md  patterns.md
.agents/skills/stdiobus-rust-sdk/scripts/: check-build.sh
crates/stdiobus/: Cargo.toml  README.md
crates/stdiobus-backend-docker/: Cargo.toml  README.md
crates/stdiobus-backend-docker/src/: lib.rs
crates/stdiobus-backend-native/: Cargo.toml  LICENSE  README.md  build.rs
crates/stdiobus-backend-native/lib/: checksums.sha256
crates/stdiobus-backend-native/src/: lib.rs
crates/stdiobus-client/: Cargo.toml  README.md
crates/stdiobus-client/src/: backend.rs  builder.rs  client.rs  lib.rs  tests.rs
crates/stdiobus-client/tests/: e2e_config_json.rs  readme_examples.rs
crates/stdiobus-core/: Cargo.toml  README.md
crates/stdiobus-core/src/: backend.rs  error.rs  lib.rs  message.rs  state.rs  stats.rs  tests.rs  types.rs
crates/stdiobus-ffi/: Cargo.toml  README.md
crates/stdiobus-ffi/src/: lib.rs
crates/stdiobus/src/: lib.rs
examples/: basic.rs  config.json  test_native_codex.rs
examples/echo-worker/: Cargo.toml
examples/echo-worker/src/: main.rs
