[workspace]
resolver = "2"
members = [
    "crates/stdiobus",
    "crates/stdiobus-core",
    "crates/stdiobus-ffi",
    "crates/stdiobus-client",
    "crates/stdiobus-backend-docker",
    "crates/stdiobus-backend-native",
]
exclude = [
    "target",
    "examples",
    "*.json",
]

[workspace.package]
version = "1.1.0"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/stdiobus/stdiobus-rust"
homepage = "https://stdiobus.com"
documentation = "https://docs.rs/stdiobus-client"
authors = ["Raman Marozau <raman@worktif.com>"]
rust-version = "1.70"
keywords = ["stdiobus", "mcp", "acp", "agent", "transport"]
categories = ["network-programming", "asynchronous", "api-bindings"]

[workspace.dependencies]
# Internal crates
stdiobus-core = { version = "1.1.0", path = "crates/stdiobus-core" }
stdiobus-ffi = { version = "1.1.0", path = "crates/stdiobus-ffi" }
stdiobus-client = { version = "1.1.0", path = "crates/stdiobus-client" }
stdiobus-backend-docker = { version = "1.1.0", path = "crates/stdiobus-backend-docker" }
stdiobus-backend-native = { version = "1.1.0", path = "crates/stdiobus-backend-native" }

# Async runtime
tokio = { version = "1.35", features = ["full"] }
async-trait = "0.1"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
thiserror = "1.0"

# FFI
libc = "0.2"

# Utilities
tracing = "0.1"
uuid = { version = "1.6", features = ["v4"] }
