[package]
name = "stdiobus-client"
description = "Async client for stdio_bus - AI agent transport layer for MCP/ACP protocols"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation = "https://docs.rs/stdiobus-client"
authors.workspace = true
rust-version.workspace = true
keywords.workspace = true
categories.workspace = true
readme = "README.md"
include = ["src/**/*", "Cargo.toml", "README.md", "LICENSE*"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[features]
default = ["docker"]
docker = ["stdiobus-backend-docker"]
native = ["stdiobus-backend-native"]

[dependencies]
stdiobus-core = { workspace = true }
stdiobus-backend-docker = { workspace = true, optional = true }
stdiobus-backend-native = { workspace = true, optional = true }

tokio = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
