[package]
name = "stdiobus-core"
description = "Core types and protocol models for stdio_bus - AI agent transport layer"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation = "https://docs.rs/stdiobus-core"
authors.workspace = true
rust-version.workspace = true
keywords.workspace = true
categories.workspace = true
readme = "README.md"
include = ["src/**/*", "Cargo.toml", "README.md", "LICENSE*"]

[dependencies]
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
uuid = { workspace = true }
