[package]
name = "stdiobus"
description = "AI agent transport layer - unified SDK for MCP/ACP protocols"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation = "https://docs.rs/stdiobus"
authors.workspace = true
rust-version.workspace = true
keywords.workspace = true
categories.workspace = true
readme = "README.md"
include = ["src/**/*", "Cargo.toml", "README.md", "LICENSE*"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[features]
default = ["docker"]
docker = ["stdiobus-client/docker"]
native = ["stdiobus-client/native"]
full = ["docker", "native"]

[dependencies]
stdiobus-client = { workspace = true }
stdiobus-core = { workspace = true }

[dev-dependencies]
serde_json = { workspace = true }
tokio = { workspace = true }
